# shop-system

backend/: Cargo.toml  other
backend/src/: db.rs  main.rs  models.rs
backend/src/handlers/: get_images.rs  mod.rs  product_type.rs  products.rs
databases/: setup.sql
databases/scr/: shop-system.db
frontend/: .env  Cargo.toml
frontend/public/: products.html  type_products.html
frontend/src/: main.rs  models.rs
frontend/src/handlers/: mod.rs  products.rs  products_type.rs
