[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
sqlx = { version = "0.8.5" , features = ["sqlite" ,"runtime-tokio","tls-native-tls","chrono","rust_decimal"]}
tokio = { version = "1.44.2" , features = ["full"]}
serde = "1.0.219"
rust_decimal = { version = "1.37.1", features = [] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }