[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
sqlx = { version = "0.8.5" , features = ["sqlite" ,"runtime-tokio","tls-native-tls","chrono"]}
tokio = { version = "1.45.0" , features = ["full"]}
serde = "1.0.219"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
actix-multipart = "0.7.2"
futures-util = "0.3.31"
actix-files = "0.6.6"
itertools = "0.14.0"