[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
tera = "1.20.0"
actix-web-lab = "0.24.1"
reqwest = { version = "0.12.15", features = ["multipart","json"] }
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.140"
dotenvy = "0.15.7"
urlencoding = "2.1.3"
actix-multipart = { version = "0.7.2"}
futures-util = "0.3.31"
actix-files = "0.6.6"
image = "0.25.6"
anyhow = "1.0.98"